Fixed CSS Project Alignment

--- a/css/style.css
+++ b/css/style.css
@@ -139,7 +139,7 @@ h3 {
 
 .project-item {
   background-color: white;
-  min-width: 250px;
+  max-width: 250px;
   min-height: 40px;
   padding: 10px;
   border-radius: 10px;
